Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [project]
-	description = programming practice for 
+	description = programming practice for codility with python
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
