Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = programming practice for codility with python
+	state = hidden
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
